[project]
name = "kepler_jax"
description = "A simple demonstration of how you can extend JAX with custom C++ and CUDA ops"
readme = "README.md"
authors = [{ name = "Dan Foreman-Mackey", email = "foreman.mackey@gmail.com" }]
requires-python = ">=3.9"
license = { file = "LICENSE" }
urls = { Homepage = "https://github.com/dfm/extending-jax" }
dependencies = ["jax>=0.4.16"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/kepler_jax/kepler_jax_version.py"]
wheel.install-dir = "kepler_jax"
minimum-version = "0.5"
build-dir = "build/{wheel_tag}"

[tool.setuptools_scm]
write_to = "src/kepler_jax/kepler_jax_version.py"
